# ai-trap-gstr

./: .gitignore  meson.build  meson_options.txt  trap_config.toml
firmware/: main_libcamera.cpp  main_v4l2.cpp
firmware/models/: README.md
firmware/models/yolo11n-320/: model.ncnn.param
firmware/src/common/: config_loader.h  trap_events.h
firmware/src/io/: libcamera_capture.cpp  libcamera_capture.h  v4l2_capture.cpp
firmware/src/pipeline/: crop_saver.cpp  crop_saver.h  decoder.cpp  decoder.h  exif_writer.cpp  exif_writer.h  persistence.h  sync_manager.cpp  sync_manager.h  tracker.cpp
firmware/src/server/: http_server.cpp  http_server.h  mjpeg_streamer.cpp  sse_server.cpp  sse_server.h
src/: config_loader.h  crop_saver.cpp  crop_saver.h  decoder.cpp  decoder.h  main_libcamera.cpp  main_v4l2.cpp  mjpeg_streamer.cpp  mjpeg_streamer.h  persistence.cpp  persistence.h  stb_image_write.h  stb_image_write_impl.cpp  tracker.cpp  tracker.h  v4l2_capture.cpp  v4l2_capture.h
